# vongola

./: .bacon-locations  .gitignore  .release-please-manifest.json  .zenodo.json  CITATION.cff  Cargo.toml  Containerfile  Makefile  README.md  citation.bib  clippy.toml  flake.nix  md  release-please-config.json  release-please-config.jsonc  rust-toolchain.toml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
crates/plugins_api/: Cargo.toml
crates/plugins_api/wit/: plugin.wit
crates/vongola/: Cargo.toml
crates/vongola/src/: main.rs
crates/vongola/src/cache/disk/: handlers.rs
crates/vongola/src/config/: hcl.rs  mod.rs  validate.rs
crates/vongola/src/plugins/: README.md  mod.rs
crates/vongola/src/plugins/oauth2/: provider.rs
crates/vongola/src/services/config/: mod.rs
crates/vongola/src/services/discovery/: mod.rs
crates/vongola/src/services/docker/: mod.rs
crates/vongola/src/services/letsencrypt/: http01.rs
crates/vongola/src/services/logger/: mod.rs
examples/: example.hcl  example.yaml  vongola.hcl
gitbook/: README.md  SUMMARY.md
gitbook/configuration/: auto-reload.md  daemon.md  environment-variables.md  logging.md  yaml.md
gitbook/configuration/hcl/: README.md  functions.md
gitbook/general/: features.md  performance.md
gitbook/installation/: docker.md  single-binary.md
gitbook/plugins/: basic-auth.md  oauth2.md  request-id.md
gitbook/use-cases/: cache.md  docker-swarm.md
