[workspace]
package = { rust-version = "1.82.0" }
members = ["crates/plugin_request_id", "crates/plugins_api", "crates/vongola"]
resolver = "2"

[profile.dev]
opt-level = 0
incremental = true

[profile.release]
strip = true
lto = true
debug = false
codegen-units = 1
incremental = true
panic = "abort"    # Abort on panic.
