[package]
name = "vongola"
description = "A securely performant reverse proxy server to safely deploy services in the deep waters of deep tech."
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0 AND QCDA-1.0"
keywords = ["proxy", "https", "reverse-proxy", "load-balancer", "pingora"]
categories = ["web-programming::http-server", "network-programming"]
exclude = [
  "*.yaml",
  "*.yml",
  "*.toml",
  "src/*.md",
  "examples/",
  "dist/",
  "docs/",
  "target/",
  "tests/",
  "assets/",
  "tmp/",
  "Makefile",
  "Dockerfile",
  "gitbook/",
  ".github/",
]
authors = ["Qompass AI <map@qompass.ai>"]
readme = "../../README.md"
homepage = "https://github.com/qompassai/vongola"
repository = "https://github.com/qompassai/vongola"
rust-version.workspace = true
workspace = "../.."

[dependencies]
TinyUFO = "0.5.0"
acme-v2 = "0.9.3"
anyhow = "1.0.90"
arc-swap = "1.7.1"
async-trait = "0.1.83"
bollard = "0.19.0"
bollard-stubs = "=1.48.3-rc.28.0.4"
bytes = "1.7.2"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
cookie = { version = "0.18.1", features = ["private"] }
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["yaml", "env"] }
hcl-rs = "0.19.2"
http = "1.1.0"
itertools = "0.14.0"
oqs = { version = "0.10.1", default-features = false, features = ["vendored", "kems", "sigs"] }
oqs-sys = { version = "0.10.1", default-features = false, features = ["vendored", "kems", "sigs"] }
jsonwebtoken = { version = "9.3.0", default-features = false }
nix = { version = "0.30.1", features = ["signal"] }
notify = { version = "8.1.0", default-features = false, features = [
  "fsevent-sys",
] }
num_cpus = "1.16.0"
once_cell = "1.20.2"
openssl = { version = "0.10", features = ["vendored"] }
papaya = "0.2.3"
path-tree = "0.8.1"
pingora = { version = "0.5.0", features = ["lb", "openssl", "proxy", "cache"] }
pingora-cache = "0.5.0"
prometheus = "0.14.0"
reqwest = { version = "0.12.8", features = ["json"] }
seize = "0.5.0"
serde = "1.0.214"
serde_json = "1.0.132"
short-crypt = "1.0.28"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["sync", "rt-multi-thread", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
wasmtime = "35.0.0"
wasmtime-wasi = "35.0.0"

[[bench]]
name = "dashmap_arc"
harness = false
path = "../benches"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
figment = { version = "0.10.19", features = ["toml", "yaml", "env", "test"] }
