# /qompassai/vongola/crates/vongola/Cargo.toml
# Qompass AI Vongola Crate Config
[package]
name = "vongola"
version = "1.0.0"
authors = ["Qompass AI <map@qompass.ai>"]
edition = "2021"
rust-version.workspace = true
description = "A Quality Server to Deploy in the Deep Waters of Deep Tech."
readme = "../../README.md"
homepage = "https://github.com/qompassai/vongola"
repository = "https://github.com/qompassai/vongola"
license = "AGPL-3.0 AND QCDA-1.0"
keywords = ["https", "load-balancer", "pingora", "proxy", "reverse-proxy"]
categories = ["network-programming", "web-programming::http-server"]
workspace = "../.."
exclude = [
  "*.toml",
  "*.yaml",
  "*.yml",
  ".github/",
  "Containerfile",
  "Makefile",
  "assets/",
  "dist/",
  "docs/",
  "examples/",
  "gitbook/",
  "src/*.md",
  "target/",
  "tests/",
  "tmp/",
]

[[bench]]
harness = false
name = "dashmap_arc"
path = "../benches"

[dependencies]
TinyUFO = "0.4.0"
acme-v2 = "0.9.3"
anyhow = "1.0.90"
arc-swap = "1.7.1"
async-trait = "0.1.88"
bollard = "0.16.1"
bollard-stubs = "=1.44.0-rc.2"
bytes = "1.10.1"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
cookie = { version = "0.18.1", features = ["private"] }
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
hcl-rs = "0.19.2"
http = "1.1.0"
itertools = "0.14.0"
jsonwebtoken = { version = "9.3.0", default-features = false }
nix = { version = "0.29.0", features = ["signal"] }
notify = { version = "7.0.0", default-features = false, features = [
  "fsevent-sys",
] }
num_cpus = "1.16.0"
once_cell = "1.20.2"
openssl = { version = "0.10", features = ["vendored"] }
oqs = { version = "0.10.1", default-features = false, features = [
  "kems",
  "sigs",
  "vendored",
] }
oqs-sys = { version = "0.10.1", default-features = false, features = [
  "kems",
  "sigs",
  "vendored",
] }
papaya = "0.1.4"
path-tree = "0.8.1"
pingora = { version = "0.4.0", features = [
  "any_tls",
  "cache",
  "lb",
  "openssl",
  "pingora-proxy",
  "proxy",
] }
pingora-cache = "0.4.0"
prometheus = "0.14.0"
reqwest = { version = "0.12.8", features = ["json"] }
seize = "0.4.5"
serde = "1.0.214"
serde_json = "1.0.132"
short-crypt = "1.0.28"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["fs", "rt-multi-thread", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
uuid = { version = "1.11.0", features = ["v4"] }
wasmtime = "35.0.0"
wasmtime-wasi = "35.0.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
figment = { version = "0.10.19", features = ["env", "test", "toml", "yaml"] }

[profile.release]
opt-level = "z"
strip = true
overflow-checks = true
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1

